--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
